force-app/main/default/objects/LabsActionPlans__APTemplateTask__c/fields/LabsActionPlans__Action_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Action_Plan_Template__c</fullName>
    <description>The parent Action Plan Template</description>
    <label>Action Plan Template</label>
    <referenceTo>LabsActionPlans__ActionPlanTemplate__c</referenceTo>
    <relationshipLabel>Action Plan Template Tasks</relationshipLabel>
    <relationshipName>aptTasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>