force-app/main/default/objects/LabsActionPlans__APTemplateTask__c/fields/LabsActionPlans__Comments__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Comments__c</fullName>
    <description>Text to be copied to Task Description</description>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>