force-app/main/default/objects/LabsActionPlans__APTemplateTask__c/fields/LabsActionPlans__Priority__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Priority__c</fullName>
    <description>Task Priority</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>