force-app/main/default/objects/LabsActionPlans__APTemplateTask__c/fields/LabsActionPlans__Reminder__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should a reminder pop-up be set?</description>
    <label>Reminder</label>
    <type>Checkbox</type>
</CustomField>