force-app/main/default/objects/LabsActionPlans__APTemplateTask__c/fields/LabsActionPlans__Subject__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Subject__c</fullName>
    <description>Task Subject</description>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>