force-app/main/default/objects/LabsActionPlans__APTemplateTask__c/fields/LabsActionPlans__TController__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__TController__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Controlling template task for this template task</description>
    <label>Controlling Task</label>
    <referenceTo>LabsActionPlans__APTemplateTask__c</referenceTo>
    <relationshipName>Dependent_APT_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>