force-app/main/default/objects/LabsActionPlans__APTemplateTask__c/fields/LabsActionPlans__Type__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__Type__c</fullName>
    <description>Task Type</description>
    <label>Task Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>