force-app/main/default/objects/LabsActionPlans__APTemplateTask__c/fields/LabsActionPlans__User__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User who will be assigned the created Task.</description>
    <inlineHelpText>The user who will always be assigned this task. Leaving this blank will, depending on Action Plans Settings, assign this task to the related record owner or the running user.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>APTTasks</relationshipName>
    <type>Lookup</type>
</CustomField>