force-app/main/default/objects/LabsActionPlans__APTemplateTask__c/validationRules/LabsActionPlans__Minutes_must_be_an_integer.validationRule-meta.xml
<ValidationRule>
    <fullName>LabsActionPlans__Minutes_must_be_an_integer</fullName>
    <active>true</active>
    <errorConditionFormula>(!ISNUMBER( LabsActionPlans__Minutes_Reminder__c ) ||  CONTAINS(LabsActionPlans__Minutes_Reminder__c, &quot;.&quot;)) &amp;&amp; !ISBLANK(LabsActionPlans__Minutes_Reminder__c)</errorConditionFormula>
    <errorMessage>Minutes Reminder must be a whole number</errorMessage>
</ValidationRule>